--- a/app/src/main/res/navigation/dogs_navigation.xml
+++ b/app/src/main/res/navigation/dogs_navigation.xml
@@ -22,5 +22,9 @@
         <action
             android:id="@+id/action_detailFragment_to_listFragment"
             app:destination="@id/listFragment" />
+        <argument
+            android:name="dogUuid"
+            app:argType="integer"
+            android:defaultValue="0" />
     </fragment>
 </navigation>
