--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,7 +8,7 @@
     tools:context=".view.DetailFragment">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvDetailFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Details"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/floatingActionButtonToList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
