--- a/app/src/main/res/navigation/dogs_navigation.xml
+++ b/app/src/main/res/navigation/dogs_navigation.xml
@@ -21,7 +21,9 @@
         tools:layout="@layout/fragment_detail" >
         <action
             android:id="@+id/action_detailFragment_to_listFragment"
-            app:destination="@id/listFragment" />
+            app:destination="@id/listFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
         <argument
             android:name="dogUuid"
             app:argType="integer"
