--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout2"
@@ -7,4 +7,53 @@
     android:layout_height="match_parent"
     tools:context=".view.DetailFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/dogImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:minHeight="200dp"
+        android:scaleType="fitCenter"
+        android:src="@mipmap/ic_launcher_dog" />
+
+    <TextView
+        android:id="@+id/dogName"
+        style="@style/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dogImage"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="4dp"
+        android:text="Dog Name" />
+
+    <TextView
+        android:id="@+id/dogPurpose"
+        style="@style/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dogName"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="4dp"
+        android:text="Dog Purpose" />
+
+    <TextView
+        android:id="@+id/dogTemperament"
+        style="@style/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dogPurpose"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="4dp"
+        android:text="Dog Temperament" />
+
+    <TextView
+        android:id="@+id/dogLifespan"
+        style="@style/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dogTemperament"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="4dp"
+        android:text="Dog Lifespan" />
+
+</RelativeLayout>
