--- a/app/src/main/res/layout/dog_item.xml
+++ b/app/src/main/res/layout/dog_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="125dp">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
